<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_title">Type your title</string>
    <string name="hint_description">Type something</string>
    <string name="btn_back">Back</string>
    <string name="btn_save">Save</string>
    <string name="btn_add_new">Add new</string>
    <string name="btn_delete">Delete</string>
</resources>