<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".screens.detail.DetailFragment">


    <TextView
        android:id="@+id/etTitle"
        style="@style/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/item_white"
        android:ems="10"
        android:hint="@string/hint_title"
        android:importantForAutofill="no"
        android:minHeight="48dp"

        tools:text="Заголовок"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/etDesc"
        style="@style/description_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:background="@color/item_white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_description"
        android:importantForAutofill="no"
        tools:text="Какой-то очень длинный текст"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button

        android:id="@+id/btnDelete"
        android:text="@string/btn_delete"
        style="@style/button_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="@+id/etDesc"
        app:layout_constraintStart_toStartOf="@+id/etDesc"
        app:layout_constraintTop_toBottomOf="@+id/etDesc" />

    <Button
        android:id="@+id/btnBack"
        style="@style/button_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />







</androidx.constraintlayout.widget.ConstraintLayout>